# fastApiUserProject

./: main.py  pyproject.toml  test_main.http
dependencies/: dependencies.py
internal/: __init__.py  admin.py
models/: models.py
routers/: items.py  users.py
