[tool.poetry]
name = "fastapiuserproject"
version = "0.1.0"
description = ""
authors = ["Alfatih <alfatihtalab7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.3"

[tool.poetry.dev-dependencies]
pydantic = "^1.9.0"
pytest = "^6.2.5"
sqlmodel = "^0.0.6"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
